--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 version: 2.1
 
 # Anchors to prevent forgetting to update a version
-#baselibs_version: &baselibs_version v7.14.0
-#bcs_version: &bcs_version v11.3.0
+baselibs_version: &baselibs_version v7.7.0
+bcs_version: &bcs_version v10.22.3
 
 orbs:
-  ci: geos-esm/circleci-tools@2
+  ci: geos-esm/circleci-tools@1
 
 workflows:
   build-test:
@@ -18,8 +18,9 @@ workflows:
           matrix:
             parameters:
               compiler: [gfortran, ifort]
-          #baselibs_version: *baselibs_version
+          baselibs_version: *baselibs_version
           repo: GEOSgcm
           checkout_fixture: true
+          fixture_branch: R21C
           mepodevelop: true
           persist_workspace: false # Needs to be true to run fv3/gcm experiment, costs extra
