--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,6 @@ workflows:
           baselibs_version: *baselibs_version
           repo: GEOSgcm
           checkout_fixture: true
-          fixture_branch: R21C
+          fixture_branch: R21C-for-CI
           mepodevelop: true
           persist_workspace: false # Needs to be true to run fv3/gcm experiment, costs extra
