GMI fix and bundled updates to support MERRA-21C production

--- a/GMAO_etc/obsys-nccs-r21c.rc
+++ b/GMAO_etc/obsys-nccs-r21c.rc
@@ -486,3 +486,13 @@ BEGIN r21c_gmi_bufr => gmi.%y4%m2%d2.t%h2z.bufr
   20140401_00z-20211231_18z 060000 /discover/nobackup/projects/gmao/input/dao_ops/ops/reanalysis/gmi_v7/bufr/Y%y4/M%m2/gmi_v7_L1CR.%y4%m2%d2.t%h2z.bufr
   20220101_00z-21001231_18z 060000 /discover/nobackup/projects/gmao/input/dao_ops/ops/flk/gmi/bufr/gmi/Y%y4/M%m2/gmi_L1CR.%y4%m2%d2.t%h2z.bufr
 END
+
+#-------------------------
+BEGIN gmao_prep_bufr => EXPID.prepbufr.%y4%m2%d2.t%h2z.blk
+ 19961231_00z-20211231_18z 060000 FVHOME/EXPID/atmens/central/EXPID.prepbufr.%y4%m2%d2.t%h2z.blk
+END
+BEGIN gmao_acftpfl_bufr => EXPID.acft_profl.%y4%m2%d2.t%h2z.bfr
+ 19961231_00z-20211231_18z 060000 FVHOME/EXPID/atmens/central/EXPID.acft_profl.%y4%m2%d2.t%h2z.bfr
+END
+
+
