--- a/GMAO_etc/obsys-nccs-gaas-r21c.rc
+++ b/GMAO_etc/obsys-nccs-gaas-r21c.rc
@@ -32,25 +32,25 @@ END
 # MODIS Terra Level2 Data
 #------------------------
 BEGIN mod04_061_his
-  20000301_00z-20221231_18z 000500 /discover/nobackup/projects/gmao/input/dao_ops/ops/reanalysis/aerosol/data/MODIS/Level2/061/MOD04/%y4/%j3/MOD04_L2.A%y4%j3.%h2%n2.061.%c%c%c%c%c%c%c%c%c%c%c%c%c.hdf
+  20000301_00z-21001231_18z 000500 /discover/nobackup/projects/gmao/input/dao_ops/ops/reanalysis/aerosol/data/MODIS/Level2/061/MOD04/%y4/%j3/MOD04_L2.A%y4%j3.%h2%n2.061.%c%c%c%c%c%c%c%c%c%c%c%c%c.hdf
 END
 
-BEGIN mod04_061_flk => MOD04_L2.A%y4%j3.%h2%n2.061.NRT.hdf
-  20230101_00z-21001231_18z 000500 /discover/nobackup/projects/gmao/input/dao_ops/ops/flk/modis/061/MOD04/%y4/%j3/MOD04_L2.A%y4%j3.%h2%n2.061.%c%c%c%c%c%c%c%c%c%c%c%c%c.NRT.hdf
-END
+#BEGIN mod04_061_flk => MOD04_L2.A%y4%j3.%h2%n2.061.NRT.hdf
+#  20240101_00z-21001231_18z 000500 /discover/nobackup/projects/gmao/input/dao_ops/ops/flk/modis/061/MOD04/%y4/%j3/MOD04_L2.A%y4%j3.%h2%n2.061.%c%c%c%c%c%c%c%c%c%c%c%c%c.NRT.hdf
+#END
 
 # MODIS Aqua Level2 Data
 #-----------------------
 BEGIN myd04_061_his
-  20020801_00z-20221231_18z 000500 /discover/nobackup/projects/gmao/input/dao_ops/ops/reanalysis/aerosol/data/MODIS/Level2/061/MYD04/%y4/%j3/MYD04_L2.A%y4%j3.%h2%n2.061.%c%c%c%c%c%c%c%c%c%c%c%c%c.hdf
+  20020801_00z-21001231_18z 000500 /discover/nobackup/projects/gmao/input/dao_ops/ops/reanalysis/aerosol/data/MODIS/Level2/061/MYD04/%y4/%j3/MYD04_L2.A%y4%j3.%h2%n2.061.%c%c%c%c%c%c%c%c%c%c%c%c%c.hdf
 END
-BEGIN myd04_061_flk => MYD04_L2.A%y4%j3.%h2%n2.061.NRT.hdf
-  20230101_00z-21001231_18z 000500 /discover/nobackup/projects/gmao/input/dao_ops/ops/flk/modis/061/MYD04/%y4/%j3/MYD04_L2.A%y4%j3.%h2%n2.061.%c%c%c%c%c%c%c%c%c%c%c%c%c.NRT.hdf
-END
+#BEGIN myd04_061_flk => MYD04_L2.A%y4%j3.%h2%n2.061.NRT.hdf
+#  20240101_00z-21001231_18z 000500 /discover/nobackup/projects/gmao/input/dao_ops/ops/flk/modis/061/MYD04/%y4/%j3/MYD04_L2.A%y4%j3.%h2%n2.061.%c%c%c%c%c%c%c%c%c%c%c%c%c.NRT.hdf
+#END
 
 # AERONET Data
 #-------------
 BEGIN aeronet_obs => aeronet.obs.%y4%m2%d2_%h2z.ods
-  19950317_18z-20211231_21z 030000 /discover/nobackup/projects/gmao/input/dao_ops/ops/reanalysis/aerosol/data/AERONET.v3/Level2/ODS/Y%y4/M%m2/aeronet.obs.%y4%m2%d2_%h2z.ods
-  20220101_00z-21000101_00z 030000 /discover/nobackup/projects/gmao/input/dao_ops/ops/reanalysis/aerosol/data/AERONET_NRT/Level2/ODS/Y%y4/M%m2/aeronet.obs.%y4%m2%d2_%h2z.ods
+  19950317_18z-20231031_21z 030000 /discover/nobackup/projects/gmao/input/dao_ops/ops/reanalysis/aerosol/data/AERONET.v3/Level2/ODS/Y%y4/M%m2/aeronet.obs.%y4%m2%d2_%h2z.ods
+  20231101_00z-21000101_00z 030000 /discover/nobackup/projects/gmao/input/dao_ops/ops/reanalysis/aerosol/data/AERONET_NRT/Level2/ODS/Y%y4/M%m2/aeronet.obs.%y4%m2%d2_%h2z.ods
 END
