--- a/GMAO_gfio/CMakeLists.txt
+++ b/GMAO_gfio/CMakeLists.txt
@@ -49,22 +49,21 @@ include_directories (${BASEDIR}/lib)
 include_directories (${include_${this}})
 include_directories (${INC_NETCDF})
 
-if (USE_F2PY)
-   if (precision STREQUAL "r4")
-      find_package(F2PY2)
-      if (F2PY2_FOUND)
-         esma_add_f2py2_module(GFIO_ SOURCES GFIO_py.F90
-            DESTINATION lib/Python
-            ONLY gfioopen gfiocreate gfiodiminquire gfioinquire
-            gfiogetvar gfiogetvart gfioputvar gfiogetbegdatetime
-            gfiointerpxy gfiointerpnn gfiocoordnn gfioclose
-            LIBRARIES GMAO_gfio_r4 ${NETCDF_LIBRARIES}
-            INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${BASEDIR}/lib ${include_${this}} ${INC_NETCDF}
-            USE_MPI
-            )
-         add_dependencies(GFIO_ ${this})
-      endif ()
-   endif ()
+if (precision STREQUAL "r4")
+  find_package(F2PY3)
+  if (F2PY3_FOUND)
+    # Using add_ here as the import test threw an SSL error on GMAO desktop
+    esma_add_f2py3_module(GFIO_ SOURCES GFIO_py.F90
+      DESTINATION lib/Python
+      ONLY gfioopen gfiocreate gfiodiminquire gfioinquire
+      gfiogetvar gfiogetvart gfioputvar gfiogetbegdatetime
+      gfiointerpxy gfiointerpnn gfiocoordnn gfioclose
+      LIBRARIES GMAO_gfio_r4 ${NETCDF_LIBRARIES}
+      INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${BASEDIR}/lib ${include_${this}} ${INC_NETCDF}
+      USE_MPI
+      )
+    add_dependencies(GFIO_ ${this})
+  endif ()
 endif ()
 
 ecbuild_add_executable(TARGET GFIO_mean_${precision}.x SOURCES GFIO_mean.f90 LIBS GMAO_gfio_${precision} )
