--- a/GMAO_etc/obsys-nccs-r21c.rc
+++ b/GMAO_etc/obsys-nccs-r21c.rc
@@ -491,7 +491,7 @@ END
 BEGIN gmao_prep_bufr => $EXPID.prepbufr.%y4%m2%d2.t%h2z.bfr
  19961231_00z-20211231_18z 060000 $FVHOME/atmens/central/$EXPID.prepbufr.%y4%m2%d2.t%h2z.blk
 END
-BEGIN gmao_acftpfl_bufr => EXPID.acft_profl.%y4%m2%d2.t%h2z.bfr
+BEGIN gmao_acftpfl_bufr => $EXPID.acft_profl.%y4%m2%d2.t%h2z.bfr
  19961231_00z-20211231_18z 060000 $FVHOME/atmens/central/$EXPID.acft_profl.%y4%m2%d2.t%h2z.bfr
 END
 
