move acquire and its dependences to GMAO_perlib for JEDI/SWELL purpuses

--- a/GMAO_perllib/CMakeLists.txt
+++ b/GMAO_perllib/CMakeLists.txt
@@ -5,6 +5,20 @@ esma_set_this()
 
 add_custom_target(${this} ALL)
 
+file(GLOB perl_files CONFIGURE_DEPENDS *.pl)
+# We must remove two files because of DASPERL
+#list(REMOVE_ITEM perl_files
+#   ${CMAKE_CURRENT_SOURCE_DIR}/Err_Log.pl
+#   ${CMAKE_CURRENT_SOURCE_DIR}/fndate.pl
+#   )
+
+file(GLOB perl_packages CONFIGURE_DEPENDS *.pm)
+
+set(perlscripts
+   acquire
+   acquire_obsys
+   )
+
 set(perldirs
    ESMA
    GrADS
@@ -16,6 +30,7 @@ set(perldirs
 foreach(perldir ${perldirs})
    install (
       DIRECTORY ${perldirs}
+      PROGRAMS ${perl_files} ${perl_packages} ${perlscripts}
       DESTINATION bin
       USE_SOURCE_PERMISSIONS
       )
