--- a/GMAO_perllib/CMakeLists.txt
+++ b/GMAO_perllib/CMakeLists.txt
@@ -7,10 +7,10 @@ add_custom_target(${this} ALL)
 
 file(GLOB perl_files CONFIGURE_DEPENDS *.pl)
 # We must remove two files because of DASPERL
-#list(REMOVE_ITEM perl_files
-#   ${CMAKE_CURRENT_SOURCE_DIR}/Err_Log.pl
-#   ${CMAKE_CURRENT_SOURCE_DIR}/fndate.pl
-#   )
+list(REMOVE_ITEM perl_files
+   ${CMAKE_CURRENT_SOURCE_DIR}/Err_Log.pl
+   ${CMAKE_CURRENT_SOURCE_DIR}/fndate.pl
+   )
 
 file(GLOB perl_packages CONFIGURE_DEPENDS *.pm)
 
@@ -30,8 +30,23 @@ set(perldirs
 foreach(perldir ${perldirs})
    install (
       DIRECTORY ${perldirs}
-      PROGRAMS ${perl_files} ${perl_packages} ${perlscripts}
       DESTINATION bin
       USE_SOURCE_PERMISSIONS
       )
 endforeach()
+
+install (
+   PROGRAMS ${perl_files} ${perl_packages} ${perlscripts}
+   DESTINATION bin
+   )
+
+set(perlscripts_with_dasperl
+   Err_Log.pl
+   fndate.pl
+   )
+   
+set (DASPERL /usr/bin/perl)
+foreach (script ${perlscripts_with_dasperl})
+   configure_file(${script} ${script} @ONLY)
+   install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${script} DESTINATION bin)
+endforeach ()
