--- a/.github/workflows/changelog-enforcer.yml
+++ b/.github/workflows/changelog-enforcer.yml
@@ -8,11 +8,10 @@ jobs:
   changelog:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: dangoslen/changelog-enforcer@v2
+    - uses: dangoslen/changelog-enforcer@v3
       with:
         changeLogPath: 'CHANGELOG.md'
-        skipLabels: 'Skip Changelog'
+        skipLabels: 'Skip Changelog,0 diff trivial,automatic,dependencies,github_actions'
         missingUpdateErrorMessage: >
             No update to CHANGELOG.md found! Please add a changelog
             entry to it describing your change.  Please note that the
