--- a/.github/workflows/perlcritic.yml
+++ b/.github/workflows/perlcritic.yml
@@ -11,12 +11,17 @@ on:
 jobs:
   perlcritic:
     runs-on: ubuntu-latest
+    container:
+      image: perl:latest
 
     steps:
       - uses: actions/checkout@v4
-      - name: Perl Critic
-        uses: Difegue/action-perlcritic@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: gugod/action-perlcritic@fun
+      - name: install perlnitpick
+        run: cpanm --notest --quiet https://github.com/gugod/App-PerlNitpick.git
+      - name: run perlnitpick
+        run: perlnitpick --inplace --rules=RemoveTrailingWhitespace,RemoveUnusedVariables,RemoveUnusedInclude,RemoveUnusedImport .
+      - name: suggester
+        uses: reviewdog/action-suggester@v1
         with:
-            args: '**/*.pl **/*/pm'
+          tool_name: perlnitpick
