--- a/GMAO_ods/kx_list.rc
+++ b/GMAO_ods/kx_list.rc
@@ -335,6 +335,20 @@ kx_list::
   324 AVHRR PATMOSX Aerosol Retrievals
   325 OMSO2 (OMI SULFER DIOXIDE)
   326 GOCI Aerosol Retrievals (Yonsei University)
+  327 GOES-16 Aerosol (Dark Target Ocean Algorithm)
+  328 GOES-16 Aerosol (Dark Target Land Algorithm)
+  329 GOES-17 Aerosol (Dark Target Ocean Algorithm)
+  330 GOES-17 Aerosol (Dark Target Land Algorithm)
+  331 Himawari Aerosol (Dark Target Ocean Algorithm)
+  332 Himawari Aerosol (Dark Target Land Algorithm)
+  333 VIIRS SNPP Aerosol (Deep Blue Land Algorithm)
+  334 VIIRS SNPP Aerosol (Deep Blue Ocean Algorithm)
+  335 VIIRS SNPP Aerosol (Dark Target Land Algorithm)
+  336 VIIRS SNPP Aerosol (Dark Target Ocean Algorithm)
+  337 VIIRS NOAA-20 Aerosol (Deep Blue Land Algorithm)
+  338 VIIRS NOAA-20 Aerosol (Deep Blue Ocean Algorithm)
+  339 VIIRS NOAA-20 Aerosol (Dark Target Land Algorithm)
+  340 VIIRS NOAA-20 Aerosol (Dark Target Ocean Algorithm)
 ::
 
 # Notes:
