--- a/GMAO_ods/kx_list.rc
+++ b/GMAO_ods/kx_list.rc
@@ -343,12 +343,14 @@ kx_list::
   332 Himawari Aerosol (Dark Target Land Algorithm)
   333 VIIRS SNPP Aerosol (Deep Blue Land Algorithm)
   334 VIIRS SNPP Aerosol (Deep Blue Ocean Algorithm)
-  335 VIIRS SNPP Aerosol (Dark Target Land Algorithm)
-  336 VIIRS SNPP Aerosol (Dark Target Ocean Algorithm)
-  337 VIIRS NOAA-20 Aerosol (Deep Blue Land Algorithm)
-  338 VIIRS NOAA-20 Aerosol (Deep Blue Ocean Algorithm)
-  339 VIIRS NOAA-20 Aerosol (Dark Target Land Algorithm)
-  340 VIIRS NOAA-20 Aerosol (Dark Target Ocean Algorithm)
+  335 VIIRS SNPP Aerosol (Dark Blue Deep Algorithm)
+  336 VIIRS SNPP Aerosol (Dark Target Land Algorithm)
+  337 VIIRS SNPP Aerosol (Dark Target Ocean Algorithm)
+  338 VIIRS NOAA-20 Aerosol (Deep Blue Land Algorithm)
+  339 VIIRS NOAA-20 Aerosol (Deep Blue Ocean Algorithm)
+  340 VIIRS NOAA-20 Aerosol (Deep Blue Deep Algorithm)
+  341 VIIRS NOAA-20 Aerosol (Dark Target Land Algorithm)
+  342 VIIRS NOAA-20 Aerosol (Dark Target Ocean Algorithm)
 ::
 
 # Notes:
