--- a/LANL_Shared/CICE4/CMakeLists.txt
+++ b/LANL_Shared/CICE4/CMakeLists.txt
@@ -46,7 +46,11 @@ set (srcs
   source/ice_work.F90
   )
 
-esma_add_library(${this} SRCS ${srcs} DEPENDENCIES MAPL)
+esma_add_library(${this}
+                 SRCS ${srcs}
+                 DEPENDENCIES MAPL
+                 TYPE SHARED
+                 )
 
 target_compile_definitions (${this} PRIVATE coupled GEOS MODIFY_TOPOGRAPHY USE_R8)
 
@@ -61,4 +65,9 @@ if (CMAKE_Fortran_COMPILER_ID MATCHES Intel AND CMAKE_BUILD_TYPE MATCHES Release
   set (CMAKE_Fortran_FLAGS_RELEASE  "${GEOS_Fortran_FLAGS_NOVECT}")
 endif ()
 
+option (BUILD_MIT_OCEAN "BUILD_MIT_OCEAN is turned off by default" OFF) #OFF by default
+if ( BUILD_MIT_OCEAN )
+  add_compile_definitions(BUILD_MIT_OCEAN)
+endif ()
+  
 ecbuild_add_executable(TARGET makdep SOURCES bld/makdep.c)
