--- a/GMAO_hermes/CMakeLists.txt
+++ b/GMAO_hermes/CMakeLists.txt
@@ -9,7 +9,7 @@ if ( NOT HERMES_LIGHT )
 
    include_directories (${include_GEOS_Shared})
    include_directories (${include_GMAO_gfio_r8})
-   
+
    set (srcs
      m_ana2dyn.F m_const.f90 m_dyn.f90 m_dyn2dyn.f90 m_dynp.F90
      m_insitu.F m_interp.F90 m_lp.F m_maph.F90 m_maph_pert.F90 m_mapz.F m_mapz_pert.F90
@@ -17,10 +17,10 @@ if ( NOT HERMES_LIGHT )
      m_interpack.F m_interpack_ad.F m_ec_set_eta.F90 m_ecdyn.f90 m_tick.f90
      m_dyn_util.F90 m_spline.f90 m_nc_JEDIinc.f90
      )
-   
+
    esma_add_library(${this} SRCS ${srcs} DEPENDENCIES GMAO_mpeu GMAO_gfio_r8)
    target_compile_options(${this} PRIVATE ${flags})
-   
+
    if (EXTENDED_SOURCE)
      set_source_files_properties (m_interpack.F    PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
      set_source_files_properties (m_interpack_ad.F PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
@@ -31,13 +31,11 @@ if ( NOT HERMES_LIGHT )
      set_source_files_properties (gcmbkg2ana.F     PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
      set_source_files_properties (diag2dyn.F       PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
    endif ()
-   set_source_files_properties (GFIO_Shave.f90 PROPERTIES COMPILE_FLAGS ${PP})
-   set_source_files_properties (GFIO_remap.f90 PROPERTIES COMPILE_FLAGS ${PP})
-   
-   ecbuild_add_executable (TARGET GFIO_remap.x     SOURCES GFIO_remap.f90     LIBS ${this} MAPL_cfio_r8)
-   ecbuild_add_executable (TARGET GFIO_Shave.x     SOURCES GFIO_Shave.f90     LIBS ${this} MAPL_cfio_r8)
+
+   ecbuild_add_executable (TARGET GFIO_remap.x     SOURCES GFIO_remap.F90     LIBS ${this} MAPL_cfio_r8)
+   ecbuild_add_executable (TARGET GFIO_Shave.x     SOURCES GFIO_Shave.F90     LIBS ${this} MAPL_cfio_r8)
    ecbuild_add_executable (TARGET lcv2prs.x        SOURCES lcv2prs.F90        LIBS ${this} MAPL_cfio_r8 MAPL GEOS_Shared)
-   
+
    ecbuild_add_executable (TARGET ana5sfc.x        SOURCES ana5sfc.F90        LIBS ${this})
    ecbuild_add_executable (TARGET diag2dyn.x       SOURCES diag2dyn.F         LIBS ${this})
    ecbuild_add_executable (TARGET drs2dyn.x        SOURCES drs2dyn.f90        LIBS ${this})
@@ -76,7 +74,7 @@ if ( NOT HERMES_LIGHT )
    ecbuild_add_executable (TARGET dyn_inflate.x    SOURCES dyn_inflate.f90    LIBS ${this})
    ecbuild_add_executable (TARGET dyn_blob.x       SOURCES dyn_blob.f90       LIBS ${this})
    ecbuild_add_executable (TARGET dyn_fsens_conv.x SOURCES dyn_fsens_conv.f90 LIBS ${this})
-   
+
    install(PROGRAMS cnv2prs.pl ana5sfc echorc.pl DESTINATION bin)
 
 else ()
@@ -84,7 +82,7 @@ else ()
    set (srcs
      m_set_eta.F90 shared_topo_remap.F90
      )
-   
+
    esma_add_library(${this} SRCS ${srcs} )
    target_compile_options(${this} PRIVATE ${flags})
 
